# personal_assistant

./: .gitignore  Cargo.toml  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: auth.rs  main.rs
