[package]
name = "mobile_frontend"
version = "0.1.0"
edition = "2024"
description = "Frontend WASM application for Personal Assistant"
license = "MIT"
repository = "https://github.com/GeEom/personal_assistant"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Storage", "UrlSearchParams", "HtmlFormElement", "FormData", "History", "HtmlInputElement", "HtmlCollection", "Element"] }
gloo-storage = "0.3"
gloo-console = "0.3"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.11", features = ["v4", "js"] }
